2002-07-02  Chris Blumenberg  <cblu@apple.com>

	Fixed asseration failure caused by an iframe not having a correct mime type.
	We now assume that local files without extensions are html files. 

        * WebView.subproj/IFWebControllerPrivate.mm:
        (+[IFWebController _MIMETypeForFile:]):

2002-07-02  Chris Blumenberg  <cblu@apple.com>

        - Moved all policy methods to IFWebControllerPolicyHandler.h
        - Moved all file URL error checking to WebKit
        - Implemented file URL policy methods
        - Renamed IFContentPolicyOpenExternally to IFContentPolicySaveAndOpenExternally

        * Misc.subproj/IFWebKitErrors.h: Added.
        * WebKit.pbproj/project.pbxproj:
        * WebView.subproj/IFLocationChangeHandler.h: removed content policy stuff
        * WebView.subproj/IFMainURLHandleClient.mm:
        (-[IFMainURLHandleClient IFURLHandleResourceDidFinishLoading:data:]): IFContentPolicySaveAndOpenExternally rename
        (-[IFMainURLHandleClient IFURLHandle:resourceDataDidBecomeAvailable:]): call the policy handler for content policy stuff
        * WebView.subproj/IFWebController.h:
        * WebView.subproj/IFWebController.mm:
        (-[IFWebController haveContentPolicy:andPath:forDataSource:]): sends a unableToImplementContentPolicy:
        (+[IFWebController canShowFile:]): now calls _MIMETypeForFile
        * WebView.subproj/IFWebControllerPolicyHandler.h: Added.
        * WebView.subproj/IFWebControllerPrivate.h:
        * WebView.subproj/IFWebControllerPrivate.mm:
        (-[IFWebController _mainReceivedProgress:forResourceHandle:fromDataSource:complete:]): IFContentPolicySaveAndOpenExternally 
rename
        (-[IFWebController _didStopLoading:]): no changes
        (+[IFWebController _MIMETypeForFile:]): added
        * WebView.subproj/IFWebDataSource.h:
        * WebView.subproj/IFWebFrame.mm:
        (-[IFWebFrame setProvisionalDataSource:]): calls _shouldShowDataSource
        * WebView.subproj/IFWebFramePrivate.h: